style(dropdown): Fixing Dropdown CSS to not have max-height and overflow

--- a/src/elements/dropdown/Dropdown.scss
+++ b/src/elements/dropdown/Dropdown.scss
@@ -32,8 +32,6 @@ novo-dropdown-container {
     position: absolute;
     padding: 0;
     min-width: 180px;
-    max-height: 500px;
-    overflow: auto;
     z-index: 1000;
     box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
     list {
